[gd_scene load_steps=13 format=3 uid="uid://02cdfsn10i8h"]

[ext_resource type="Script" path="res://Diary/level/diary.gd" id="1_4sese"]
[ext_resource type="PackedScene" uid="uid://u30ubyxddql6" path="res://Diary/env/map.tscn" id="2_ol8u2"]
[ext_resource type="PackedScene" uid="uid://dx1x3t7erttod" path="res://Diary/player/player.tscn" id="3_s6re8"]
[ext_resource type="PackedScene" uid="uid://boacayteipc1t" path="res://Diary/GUI/ui.tscn" id="4_d0rri"]
[ext_resource type="PackedScene" uid="uid://div7cmy3na8ab" path="res://Diary/NPCs/pink.tscn" id="6_ijf5w"]
[ext_resource type="PackedScene" uid="uid://cdi2x4h0xdo5b" path="res://Diary/NPCs/brown.tscn" id="7_4pprx"]
[ext_resource type="PackedScene" uid="uid://d0hqtlrrn3173" path="res://Diary/item/box.tscn" id="7_e76f5"]
[ext_resource type="PackedScene" uid="uid://dp2ar37nga46d" path="res://Diary/item/smallbox.tscn" id="8_jtwdr"]
[ext_resource type="Texture2D" uid="uid://cvnej3p0nklsg" path="res://Diary/png/exit.png" id="9_s2rsp"]
[ext_resource type="Texture2D" uid="uid://p2kbtoc061q4" path="res://Diary/png/exittext.png" id="10_l7l4k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_137bv"]
size = Vector2(26, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vtbr"]
size = Vector2(8.5, 61)

[node name="Diary" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4sese")

[node name="map" parent="." instance=ExtResource("2_ol8u2")]

[node name="player" parent="." instance=ExtResource("3_s6re8")]
position = Vector2(1059, 138)

[node name="npcs" type="Node2D" parent="."]

[node name="pink" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(917, 284)
scale = Vector2(0.4, 0.4)

[node name="pink2" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(675, -14)
scale = Vector2(0.4, 0.4)

[node name="pink3" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(827, -138)
scale = Vector2(0.4, 0.4)

[node name="pink4" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(576, 471)
scale = Vector2(0.4, 0.4)

[node name="pink5" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(132, 471)
scale = Vector2(0.4, 0.4)

[node name="pink6" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(-313, 238)
scale = Vector2(0.4, 0.4)

[node name="pink7" parent="npcs" instance=ExtResource("6_ijf5w")]
position = Vector2(-730, 331)
scale = Vector2(0.4, 0.4)

[node name="brown" parent="npcs" instance=ExtResource("7_4pprx")]
position = Vector2(708, 106)
scale = Vector2(0.4, 0.4)

[node name="brown2" parent="npcs" instance=ExtResource("7_4pprx")]
position = Vector2(598, 140)
scale = Vector2(0.4, 0.4)

[node name="brown3" parent="npcs" instance=ExtResource("7_4pprx")]
position = Vector2(170, 192)
scale = Vector2(0.4, 0.4)

[node name="brown6" parent="npcs" instance=ExtResource("7_4pprx")]
position = Vector2(-623, -28)
scale = Vector2(0.4, 0.4)

[node name="brown4" parent="npcs" instance=ExtResource("7_4pprx")]
position = Vector2(366, -6.99998)
scale = Vector2(0.4, 0.4)

[node name="brown5" parent="npcs" instance=ExtResource("7_4pprx")]
position = Vector2(177, -89)
scale = Vector2(0.4, 0.4)

[node name="invispos" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="invispos"]
position = Vector2(-731, -338)

[node name="Marker2D2" type="Marker2D" parent="invispos"]
position = Vector2(-763, -364)

[node name="Marker2D3" type="Marker2D" parent="invispos"]
position = Vector2(-774, -321)

[node name="Marker2D4" type="Marker2D" parent="invispos"]
position = Vector2(-402, -372)

[node name="Marker2D5" type="Marker2D" parent="invispos"]
position = Vector2(-364, -334)

[node name="Marker2D6" type="Marker2D" parent="invispos"]
position = Vector2(-245, -370)

[node name="Marker2D7" type="Marker2D" parent="invispos"]
position = Vector2(-109, -347)

[node name="Marker2D8" type="Marker2D" parent="invispos"]
position = Vector2(-62, -217)

[node name="Marker2D9" type="Marker2D" parent="invispos"]
position = Vector2(-269, -215)

[node name="Marker2D46" type="Marker2D" parent="invispos"]
position = Vector2(-420, -39)

[node name="Marker2D47" type="Marker2D" parent="invispos"]
position = Vector2(-261, -109)

[node name="Marker2D48" type="Marker2D" parent="invispos"]
position = Vector2(-95, 42)

[node name="Marker2D49" type="Marker2D" parent="invispos"]
position = Vector2(67, 29)

[node name="Marker2D50" type="Marker2D" parent="invispos"]
position = Vector2(-231, 369)

[node name="Marker2D51" type="Marker2D" parent="invispos"]
position = Vector2(-276, 520)

[node name="Marker2D52" type="Marker2D" parent="invispos"]
position = Vector2(-25, 424)

[node name="Marker2D53" type="Marker2D" parent="invispos"]
position = Vector2(-759, 188)

[node name="Marker2D54" type="Marker2D" parent="invispos"]
position = Vector2(-770, 92)

[node name="Marker2D55" type="Marker2D" parent="invispos"]
position = Vector2(-670, 98)

[node name="Marker2D56" type="Marker2D" parent="invispos"]
position = Vector2(-679, 192)

[node name="Marker2D57" type="Marker2D" parent="invispos"]
position = Vector2(-519, 245)

[node name="Marker2D58" type="Marker2D" parent="invispos"]
position = Vector2(-628, 302)

[node name="Marker2D59" type="Marker2D" parent="invispos"]
position = Vector2(-456, 83)

[node name="Marker2D60" type="Marker2D" parent="invispos"]
position = Vector2(-607, -142)

[node name="Marker2D61" type="Marker2D" parent="invispos"]
position = Vector2(-726, -110)

[node name="Marker2D62" type="Marker2D" parent="invispos"]
position = Vector2(-441, -202)

[node name="Marker2D63" type="Marker2D" parent="invispos"]
position = Vector2(-190, 472)

[node name="Marker2D64" type="Marker2D" parent="invispos"]
position = Vector2(-98, 253)
rotation = 1.17206

[node name="Marker2D65" type="Marker2D" parent="invispos"]
position = Vector2(340, 211)
rotation = 1.17206

[node name="Marker2D66" type="Marker2D" parent="invispos"]
position = Vector2(425, 226)
rotation = 1.17206

[node name="Marker2D67" type="Marker2D" parent="invispos"]
position = Vector2(421, 286)
rotation = 1.17206

[node name="Marker2D68" type="Marker2D" parent="invispos"]
position = Vector2(982, 335)
rotation = 1.17206

[node name="Marker2D69" type="Marker2D" parent="invispos"]
position = Vector2(974, -33)
rotation = 1.17206

[node name="Marker2D10" type="Marker2D" parent="invispos"]
position = Vector2(-173, -98)
rotation = -0.602786

[node name="Marker2D11" type="Marker2D" parent="invispos"]
position = Vector2(-111, -70)
rotation = -0.602786

[node name="Marker2D12" type="Marker2D" parent="invispos"]
position = Vector2(104, -72)
rotation = -0.222837

[node name="Marker2D13" type="Marker2D" parent="invispos"]
position = Vector2(125, -336)
rotation = -0.222837

[node name="Marker2D14" type="Marker2D" parent="invispos"]
position = Vector2(53, -368)
rotation = -0.222837

[node name="Marker2D15" type="Marker2D" parent="invispos"]
position = Vector2(25, -319)
rotation = -0.222837

[node name="Marker2D16" type="Marker2D" parent="invispos"]
position = Vector2(442, -284)
rotation = -2.2375

[node name="Marker2D17" type="Marker2D" parent="invispos"]
position = Vector2(431, -385)
rotation = -2.2375

[node name="Marker2D18" type="Marker2D" parent="invispos"]
position = Vector2(339, -376)
rotation = -1.86226

[node name="Marker2D19" type="Marker2D" parent="invispos"]
position = Vector2(231, -363)
rotation = -1.86226

[node name="Marker2D20" type="Marker2D" parent="invispos"]
position = Vector2(533, -374)
rotation = -1.86226

[node name="Marker2D21" type="Marker2D" parent="invispos"]
position = Vector2(548, -312)
rotation = -1.86226

[node name="Marker2D22" type="Marker2D" parent="invispos"]
position = Vector2(610, -354)
rotation = -1.86226

[node name="Marker2D23" type="Marker2D" parent="invispos"]
position = Vector2(820, -371)
rotation = -3.20636

[node name="Marker2D24" type="Marker2D" parent="invispos"]
position = Vector2(952, -358)
rotation = -2.11807

[node name="Marker2D25" type="Marker2D" parent="invispos"]
position = Vector2(886, -313)
rotation = -2.11807

[node name="Marker2D26" type="Marker2D" parent="invispos"]
position = Vector2(905, -177)
rotation = -2.11807

[node name="Marker2D27" type="Marker2D" parent="invispos"]
position = Vector2(882, -145)
rotation = -2.11807

[node name="Marker2D28" type="Marker2D" parent="invispos"]
position = Vector2(623, -162)
rotation = -2.11807

[node name="Marker2D29" type="Marker2D" parent="invispos"]
position = Vector2(540, -3.00002)
rotation = -2.11807

[node name="Marker2D30" type="Marker2D" parent="invispos"]
position = Vector2(529, 106)
rotation = -2.11807

[node name="Marker2D31" type="Marker2D" parent="invispos"]
position = Vector2(529, 229)
rotation = -2.11807

[node name="Marker2D32" type="Marker2D" parent="invispos"]
position = Vector2(771, 240)
rotation = -2.11807

[node name="Marker2D33" type="Marker2D" parent="invispos"]
position = Vector2(771, 208)
rotation = -2.11807

[node name="Marker2D34" type="Marker2D" parent="invispos"]
position = Vector2(797, 129)
rotation = -1.82428

[node name="Marker2D35" type="Marker2D" parent="invispos"]
position = Vector2(480, 459)
rotation = -1.82428

[node name="Marker2D36" type="Marker2D" parent="invispos"]
position = Vector2(331, 513)
rotation = -1.82428

[node name="Marker2D37" type="Marker2D" parent="invispos"]
position = Vector2(541, 476)
rotation = -1.82428

[node name="Marker2D38" type="Marker2D" parent="invispos"]
position = Vector2(671, 523)
rotation = -1.82428

[node name="Marker2D39" type="Marker2D" parent="invispos"]
position = Vector2(208, 521)
rotation = -1.82428

[node name="Marker2D40" type="Marker2D" parent="invispos"]
position = Vector2(809, 455)
rotation = 0.202642

[node name="Marker2D41" type="Marker2D" parent="invispos"]
position = Vector2(777, 510)
rotation = 0.202642

[node name="Marker2D42" type="Marker2D" parent="invispos"]
position = Vector2(992, 489)
rotation = 0.202642

[node name="Marker2D43" type="Marker2D" parent="invispos"]
position = Vector2(367, 438)
rotation = 0.202642

[node name="Marker2D44" type="Marker2D" parent="invispos"]
position = Vector2(-397, 516)
rotation = 0.202642

[node name="Marker2D45" type="Marker2D" parent="invispos"]
position = Vector2(-563, 365)
rotation = 0.202642

[node name="ui" parent="." instance=ExtResource("4_d0rri")]
process_mode = 3

[node name="trans" type="Node2D" parent="."]

[node name="woodendoor1" type="Area2D" parent="trans"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trans/woodendoor1"]
position = Vector2(592, 321)
shape = SubResource("RectangleShape2D_137bv")

[node name="wdoor1pos" type="Marker2D" parent="trans/woodendoor1"]
position = Vector2(592, 330)

[node name="woodendoor2" type="Area2D" parent="trans"]

[node name="wdoor2pos" type="Marker2D" parent="trans/woodendoor2"]
position = Vector2(-384, -391)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trans/woodendoor2"]
position = Vector2(-384, -399.25)
shape = SubResource("RectangleShape2D_137bv")

[node name="irondoor1" type="Area2D" parent="trans"]

[node name="idoor1" type="Marker2D" parent="trans/irondoor1"]
position = Vector2(1136, 122)

[node name="irondoor1" type="CollisionShape2D" parent="trans/irondoor1"]
position = Vector2(1136, 113)
shape = SubResource("RectangleShape2D_137bv")

[node name="irondoor2" type="Area2D" parent="trans"]

[node name="idoor2" type="Marker2D" parent="trans/irondoor2"]
position = Vector2(80, -387)

[node name="irondoor2" type="CollisionShape2D" parent="trans/irondoor2"]
position = Vector2(80, -399)
shape = SubResource("RectangleShape2D_137bv")

[node name="emtydoor1" type="Area2D" parent="trans"]

[node name="edoor1" type="Marker2D" parent="trans/emtydoor1"]
position = Vector2(-320, 366)

[node name="emtydoor1" type="CollisionShape2D" parent="trans/emtydoor1"]
position = Vector2(-320, 353)
shape = SubResource("RectangleShape2D_137bv")

[node name="emtydoor2" type="Area2D" parent="trans"]

[node name="edoor2" type="Marker2D" parent="trans/emtydoor2"]
position = Vector2(832, -389)

[node name="emtydoor2" type="CollisionShape2D" parent="trans/emtydoor2"]
position = Vector2(832, -399)
shape = SubResource("RectangleShape2D_137bv")

[node name="container" type="Node2D" parent="."]
y_sort_enabled = true

[node name="smallbox2" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(793, 73)

[node name="smallbox12" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(776, -231)

[node name="smallbox3" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(598, 77)

[node name="smallbox13" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(447, -408)

[node name="smallbox4" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(214, 112)

[node name="smallbox5" parent="container" instance=ExtResource("8_jtwdr")]
z_index = 4
position = Vector2(7, 136)

[node name="smallbox15" parent="container" instance=ExtResource("8_jtwdr")]
z_index = 4
position = Vector2(7, 136)

[node name="smallbox16" parent="container" instance=ExtResource("8_jtwdr")]
z_index = 4
position = Vector2(405, -98)

[node name="smallbox6" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(520, 423)

[node name="smallbox14" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(748, 427)

[node name="smallbox7" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(-340, 168)

[node name="smallbox10" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(-40, -404)

[node name="smallbox11" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(-634, -231)

[node name="smallbox9" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(-806, 284)

[node name="smallbox8" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(-195, 170)

[node name="smallbox" parent="container" instance=ExtResource("8_jtwdr")]
position = Vector2(808, 73)

[node name="box" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(800, 169)

[node name="box13" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(952, -186)

[node name="box14" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(889, -225)

[node name="box2" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(51, 319)

[node name="box3" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(49, 112)

[node name="box15" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(444, 113)

[node name="box4" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(450, 429)

[node name="box5" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-798, 527)

[node name="box7" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-482, 530)

[node name="box8" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-667, 459)

[node name="box9" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-285, -405)

[node name="box10" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-63, -404)

[node name="box12" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(208, -403)

[node name="box6" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-271, 171)

[node name="box11" parent="container" instance=ExtResource("7_e76f5")]
position = Vector2(-751, -227)

[node name="exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2(1234, 143.5)
shape = SubResource("RectangleShape2D_1vtbr")

[node name="Exit" type="Sprite2D" parent="."]
modulate = Color(0.305882, 0.305882, 0.156863, 1)
position = Vector2(1232, 146)
scale = Vector2(0.0582032, 0.0614583)
texture = ExtResource("9_s2rsp")

[node name="Exittext" type="Sprite2D" parent="."]
position = Vector2(1279, 149)
scale = Vector2(0.12269, 0.103448)
texture = ExtResource("10_l7l4k")

[connection signal="body_entered" from="trans/woodendoor1" to="." method="_on_woodendoor_1_body_entered"]
[connection signal="body_entered" from="trans/woodendoor2" to="." method="_on_woodendoor_2_body_entered"]
[connection signal="body_entered" from="trans/irondoor1" to="." method="_on_irondoor_1_body_entered"]
[connection signal="body_entered" from="trans/irondoor2" to="." method="_on_irondoor_2_body_entered"]
[connection signal="body_entered" from="trans/emtydoor1" to="." method="_on_emtydoor_1_body_entered"]
[connection signal="body_entered" from="trans/emtydoor2" to="." method="_on_emtydoor_2_body_entered"]
[connection signal="body_entered" from="exit" to="." method="_on_exit_body_entered"]
