[gd_scene load_steps=10 format=3 uid="uid://02cdfsn10i8h"]

[ext_resource type="Script" path="res://level/diary.gd" id="1_53pii"]
[ext_resource type="PackedScene" uid="uid://u30ubyxddql6" path="res://env/map.tscn" id="1_dls86"]
[ext_resource type="PackedScene" uid="uid://dx1x3t7erttod" path="res://player/player.tscn" id="2_ay4v3"]
[ext_resource type="PackedScene" uid="uid://div7cmy3na8ab" path="res://NPCs/pink.tscn" id="4_0mong"]
[ext_resource type="PackedScene" uid="uid://cdi2x4h0xdo5b" path="res://NPCs/brown.tscn" id="5_p3d41"]
[ext_resource type="PackedScene" uid="uid://ciu0nhdmbp1io" path="res://NPCs/hairless.tscn" id="6_t8lji"]
[ext_resource type="PackedScene" uid="uid://boacayteipc1t" path="res://GUI/ui.tscn" id="7_doavt"]
[ext_resource type="PackedScene" uid="uid://c2l3ae7dfiw5n" path="res://item/bubble.tscn" id="8_ok04o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ur4o"]
size = Vector2(20, 1)

[node name="Diary" type="Node2D"]
script = ExtResource("1_53pii")

[node name="bubble" parent="." instance=ExtResource("8_ok04o")]
position = Vector2(1083, 143)

[node name="bubble2" parent="." instance=ExtResource("8_ok04o")]
position = Vector2(1109, 150)

[node name="bubble3" parent="." instance=ExtResource("8_ok04o")]
position = Vector2(1109, 129)

[node name="map" parent="." instance=ExtResource("1_dls86")]

[node name="player" parent="." instance=ExtResource("2_ay4v3")]
position = Vector2(1162, 142)

[node name="npcs" type="Node2D" parent="."]

[node name="pink" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(650, -36)
scale = Vector2(0.4, 0.4)

[node name="pink2" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(-727, -357)
scale = Vector2(0.4, 0.4)

[node name="pink3" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(414, -61)
scale = Vector2(0.4, 0.4)

[node name="pink4" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(-165, -334)
scale = Vector2(0.4, 0.4)

[node name="pink5" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(421, 298)
scale = Vector2(0.4, 0.4)

[node name="pink6" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(-88, 31)
scale = Vector2(0.4, 0.4)

[node name="pink7" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(354, 470)
scale = Vector2(0.4, 0.4)

[node name="pink8" parent="npcs" instance=ExtResource("4_0mong")]
position = Vector2(-621, -178)
scale = Vector2(0.4, 0.4)

[node name="brown" parent="npcs" instance=ExtResource("5_p3d41")]
position = Vector2(-251, 50)
scale = Vector2(0.4, 0.4)

[node name="brown2" parent="npcs" instance=ExtResource("5_p3d41")]
position = Vector2(-528, 203)
scale = Vector2(0.4, 0.4)

[node name="brown3" parent="npcs" instance=ExtResource("5_p3d41")]
position = Vector2(-409, 210)
scale = Vector2(0.4, 0.4)

[node name="brown4" parent="npcs" instance=ExtResource("5_p3d41")]
position = Vector2(-127, -234)
scale = Vector2(0.4, 0.4)

[node name="brown5" parent="npcs" instance=ExtResource("5_p3d41")]
position = Vector2(365, -297)
scale = Vector2(0.4, 0.4)

[node name="hairless" parent="npcs" instance=ExtResource("6_t8lji")]
position = Vector2(-110, 96)
scale = Vector2(0.4, 0.4)

[node name="hairless2" parent="npcs" instance=ExtResource("6_t8lji")]
position = Vector2(42, 141)
scale = Vector2(0.4, 0.4)

[node name="hairless3" parent="npcs" instance=ExtResource("6_t8lji")]
position = Vector2(-608, -58)
scale = Vector2(0.4, 0.4)

[node name="out" type="Marker2D" parent="."]
position = Vector2(79, -393)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(592, 322)
shape = SubResource("RectangleShape2D_1ur4o")

[node name="ui" parent="." instance=ExtResource("7_doavt")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
